# jista

./: .eslintrc.cjs  .gitignore  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
assets/: README.md
docs/: requirements_mvp.md
examples/: README.md  joe_startlist_scrape.py  start_time_finder.py
server/: .dockerignore  Dockerfile  README.md  README_DEPLOY.md  cloudbuild.yaml  deploy.sh  pyproject.toml
server/jista/: __init__.py
server/jista/app/: __init__.py  main.py  models.py
server/jista/app/data/: __init__.py  sample_events.json
server/jista/app/services/: __init__.py  event_service.py  joe_scraper_service.py  startlist_service.py
server/jista_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: config.ts
src/components/: EventList.tsx  JOEEventList.tsx
src/hooks/: useEventSelection.tsx
src/screens/: MainScreen.tsx
src/services/: api.ts  storage.ts
src/types/: events.ts
