[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jista-server"
version = "0.1.0"
description = "Backend API for the Jista MVP"
authors = [{ name = "Jista Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<0.112",
  "uvicorn[standard]>=0.27,<0.28",
  "httpx>=0.27,<0.28",
  "pdfplumber>=0.10.0",
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "python-dateutil>=2.8.0",
  "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.2,<25",
  "ruff>=0.3.0,<0.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
